# teloscopy

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  KNOWLEDGE_BASE.md  LICENSE  PSYCHIATRY_KNOWLEDGE_BASE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: android-ci.yml  build-apps.yml  ci.yml
android/: PRIVACY_POLICY.md  README.md  STORE_LISTING.md
android/store-listing/: privacy-policy.md
configs/: pipeline.yaml
docs/: PRIVACY_POLICY.md  RESEARCH.md  TERMS_OF_SERVICE.md
ios/: README.md
ios/Teloscopy/: TeloscopyApp.swift
ios/Teloscopy.xcodeproj/: project.pbxproj
ios/Teloscopy/Models/: APIModels.swift  Analysis.swift
ios/Teloscopy/Services/: APIService.swift  PsychiatryService.swift  SyncManager.swift
ios/Teloscopy/Teloscopy.xcodeproj/: project.pbxproj
ios/Teloscopy/Views/: AnalysisView.swift  ConsentView.swift  HealthCheckupView.swift  PsychiatryView.swift  SettingsView.swift  TraumaFirstAidView.swift
src/teloscopy/: __init__.py  cli.py
src/teloscopy/agents/: base.py  genomics_agent.py  image_agent.py  improvement_agent.py  nutrition_agent.py  orchestrator.py  report_agent.py
src/teloscopy/analysis/: __init__.py  statistics.py
src/teloscopy/clinical/: endpoints.py
src/teloscopy/data/: __init__.py  benchmarks.py  datasets.py
src/teloscopy/facial/: image_classifier.py  predictor.py
src/teloscopy/genomics/: disease_risk.py
tests/: test_agents.py  test_diet_restrictions.py  test_diet_variety.py  test_disease_risk.py  test_health_checkup.py  test_nutrition.py  test_pipeline.py  test_security.py  test_synthetic.py  test_webapp.py
transcripts/: 01_ux-1aRB8Res.txt  02_xvVL3tT5hZM.txt  03_pmDUDo_YFoU.txt  04_bUuvpNuX4rM.txt  05_z46n67DiiLg.txt  06_50eS3GZS6lk.txt  07_WwL39WoQcEM.txt  08_pg6xdfYe6To.txt  09_LO-oBa-ZKqQ.txt  10_3QpZqgTqlEk.txt  11_6NnbKd8_Q28.txt  12_V2G-j-2v3FU.txt  13_huxxLqcZqCw.txt  14_0D_1XdYRtI4.txt  15_cdvb92kSmAE.txt  16_SJ1q9KeGdwI.txt  17_HhMVrr7-JEk.txt  18_HMyX2FXE9S4.txt
(+59 files in other folders)
